fix(ui): scrollbar disappearing after opening certain dialogs

--- a/client/src/css/globals.css
+++ b/client/src/css/globals.css
@@ -164,6 +164,7 @@
   }
   body {
     @apply bg-background text-foreground;
+    overflow-y: auto !important;
   }
   #root {
     @apply flex min-h-screen min-w-80 flex-col;
